# dynaMIS

./: CMakeLists.txt  LICENSE  README.md  _config.yml  index.md
Benchmark/1000/: gaussian325768029-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian386018710-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian430330683-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian440035723-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian455996239-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian675456514-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian734415198-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian763702833-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian843359937-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian911560128-1000-3-100.000000-100.000000-7.000000-2.000000-1.000000
Benchmark/2000/: gaussian-1853757249-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian-819709753-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian-986623827-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian1055978185-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian1116079034-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian1517576166-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian1749607106-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian388315334-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian51349892-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000  gaussian662001543-2000-3-100.000000-100.000000-7.000000-2.000000-1.000000
Benchmark/4000/: gaussian-1234408079-4000-3-120.000000-120.000000-7.000000-2.000000-1.000000  gaussian-1560045561-4000-3-120.000000-120.000000-7.000000-2.000000-1.000000  (+8 more)
Debug/: .gitignore  makefile
src/: CMakeLists.txt  bbox.cpp  bbox.h  dynaMIS.cpp  dynaMIS.h  graph.cpp  graph.h  jsonM.cpp  jsonM.h  main.cpp  main.h  miscellaneous.cpp  miscellaneous.h  problem.cpp  problem.h  problem_arrow.cpp  problem_arrow.h  problem_arrow_greedy.cpp  problem_arrow_greedy.h  problem_cg.cpp  problem_cg.h  problem_rs.cpp  problem_rs.h  problem_sl.cpp  problem_sl.h  problem_sl_greedy.cpp  problem_sl_greedy.h  problem_slk.cpp  problem_slk.h  problem_slk_greedy.cpp  problem_slk_greedy.h
src/gpl_data_structure/: bbox.cpp  bbox.h  graph.cpp  graph.h  interval.h  label_point.cpp  label_point.h  problem.cpp  problem.h  range_tree.cpp  range_tree.h  rect_problem.cpp  rect_problem.h
src/simulation/: simulation.h  simulation.tpp
src/solvers/: solver.cpp  solver.h  solver_graph.cpp  solver_graph.h  solver_grid.h  solver_grid.tpp  solver_line.h  solver_line.tpp  solver_ors.cpp  solver_ors.h
src/solvers/exact_solver/: wmis_solver.cpp  wmis_solver.h
src/solvers/grid_solver/: grid.cpp  grid.h  grid_greedy.cpp  grid_greedy.h  grid_k.cpp  grid_k.h  grid_k_greedy.cpp  grid_k_greedy.h
src/solvers/line_solver/: line.cpp  line.h  line_greedy.cpp  line_greedy.h  line_rect.cpp  line_rect.h  line_rect_greedy.cpp  line_rect_greedy.h
src/solvers/mis_solver/: mis_cg.cpp  mis_cg.h  mis_ors.cpp  mis_ors.h
src/tools/: jsonM.cpp  jsonM.h  miscellaneous.cpp  miscellaneous.h
(+21 files in other folders)
